changes to randomize the order

--- a/ssl.html
+++ b/ssl.html
@@ -321,6 +321,11 @@
        },
        success: function(output) { console.log(output); }
      });
+     
+     setTimeout(function() {
+    window.location.replace("../LSL_Exp/lsl.html");
+    }, 3000);
+       }
     
    
        }
